finalização de endpoints