@@ -4,10 +4,9 @@ import br.senai.lab360.labmedication.mappers.AdressMapper;
 import br.senai.lab360.labmedication.mappers.PatientMapper;
 import br.senai.lab360.labmedication.models.adressmodels.dtos.AddressIdDto;
 import br.senai.lab360.labmedication.models.personmodels.patientmodels.Patient;
-import br.senai.lab360.labmedication.models.personmodels.patientmodels.PatientDataInfoResponse;
 import br.senai.lab360.labmedication.models.personmodels.patientmodels.dtos.PatientPostRequestBodyDto;
-import br.senai.lab360.labmedication.models.personmodels.patientmodels.dtos.PatientResponseBodyDto;
 import br.senai.lab360.labmedication.models.personmodels.patientmodels.dtos.PatientPutRequestBodyDto;
+import br.senai.lab360.labmedication.models.personmodels.patientmodels.dtos.PatientResponseBodyDto;
 import br.senai.lab360.labmedication.repositories.PatientRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -15,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +27,7 @@ public class PatientService {
         return patientRepository.findAll()
                 .stream()
                 .map(patientMapper::mapToPatientResponseBodyDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //  S04
@@ -56,7 +54,7 @@ public class PatientService {
 
     //  S05
     public PatientResponseBodyDto replacePatientData(Long id, PatientPutRequestBodyDto patientPutRequestBodyDto) {
-        Patient savedPatient = findByIdOrThrowNotFoundException(id);
+        findByIdOrThrowNotFoundException(id);
         Patient patient = patientMapper.map(patientPutRequestBodyDto);
         patient.setId(id);
 
@@ -66,48 +64,29 @@ public class PatientService {
     public List<PatientResponseBodyDto> findAllByName(String name) {
         if (name != null) {
             List<Patient> patientList = patientRepository.findAllByName(name);
-            if (patientList == null || patientList.size() == 0) {
+            if (patientList == null || patientList.isEmpty()) {
                 throw new ResponseStatusException(HttpStatus.NOT_FOUND, "There are no Pacient with " + name +
                         " in their name");
             }
             return patientList
                     .stream()
-                    .map(patientMapper::mapToPatientResponseBodyDto).collect(Collectors.toList());
+                    .map(patientMapper::mapToPatientResponseBodyDto).toList();
         }
-        List<PatientResponseBodyDto> patientList = patientRepository.findAll()
+        return patientRepository.findAll()
                 .stream()
                 .map(patientMapper::mapToPatientResponseBodyDto)
-                .collect(Collectors.toList());
-        return patientList;
+                .toList();
     }
 
     private List<Patient> allMedicationsByPatient(Long id) {
         return patientRepository.findAllIdMedications(id);
     }
 
-    public void deletePatient(Long id) throws Exception {
+    public void deletePatient(Long id) {
         Patient patientToDelete = findByIdOrThrowNotFoundException(id);
-        //TODO S08 verificar medicação administrada
         allMedicationsByPatient(id);
         patientRepository.delete(patientToDelete);
     }
 
-    public List<PatientDataInfoResponse> getDataInfo() {
 
-        List<PatientDataInfoResponse> result = patientRepository.getDataInfo();
-//        List<PatientDataInfoRespondeDto> response = result.stream().map(
-//                (patient) -> {
-//                    PatientDataInfoRespondeDto responseDto = patientMapper.mapToPatientDataInfoRespondeDto(patient);
-//                    responseDto.setId(patient.getId());
-//                    responseDto.setTotalMedication(patient.
-//
-//                    );
-//                    return responseDto;
-//                }
-//        ).collect(Collectors.toList());
-//                patientRepository.getDataInfo();
-//
-//         patientRepository.getDataInfo();
-        return result;
-    }
 }
